save extra output in act example

--- a/examples/act-dr6-lens.ini
+++ b/examples/act-dr6-lens.ini
@@ -25,7 +25,7 @@ priors = examples/act-dr6-lens-priors.ini
 quiet=F
 debug=F
 timing=F
-
+extra_output=cosmological_parameters/sigma_8 cosmological_parameters/omega_m
 
 [act_dr6_lens]
 file = ./likelihood/act-dr6-lens/act_dr6_lenslike_interface.py
@@ -33,7 +33,7 @@ like_corrections = T
 variant = actplanck_baseline
 
 [output]
-filename = output/act-dr6-lens-emcee.txt
+filename = output/act-dr6-lens.txt
 
 ; The consistency module translates between our chosen parameterization
 ; and any other that modules in the pipeline may want (e.g. camb)
