--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -187,7 +187,7 @@ jobs:
         run: |
           source cosmosis-configure
           cosmosis examples/act-dr6-lens.ini | tee output/act-dr6.log
-          grep -e "Likelihood =  -9.89" -e Likelihood =  -9.90" output/act-dr6.log
+          grep -e 'Likelihood =  -9.89' -e 'Likelihood =  -9.90' output/act-dr6.log
 
       - name: DES Y3 6x2pt
         shell: bash -l {0}
