Change quiet setting to verbosity

--- a/demos/chaining.ini
+++ b/demos/chaining.ini
@@ -2,6 +2,7 @@
 ; The emcee sampler, which uses the Goodman & Weare algorithm
 sampler = emcee
 ;  metropolis
+verbosity = quiet
 
 
 [emcee]
@@ -30,7 +31,6 @@ nsteps = 50
 [output]
 filename = demo5.txt
 format = text
-verbosity= debug
 
 [pipeline]
 ; We use two likelihoods, the JLA (for high redshift) and
@@ -40,7 +40,6 @@ modules = consistency camb jla riess11
 values = demos/values5.ini
 extra_output =
 likelihoods = jla riess
-quiet=T
 debug=F
 timing=F
 
