--- a/demos/demo10.ini
+++ b/demos/demo10.ini
@@ -1,6 +1,7 @@
 [runtime]
 ; changed sampler from test to grid
 sampler = grid
+verbosity = standard
 
 [grid]
 ;parameters for grid are here
@@ -19,8 +20,6 @@ values = demos/values10.ini
 likelihoods = cfhtlens
 extra_output = 
 
-; We can get a little more output during the run by setting some values
-quiet=F
 timing=F
 debug=F
 
