--- a/demos/demo12.ini
+++ b/demos/demo12.ini
@@ -1,6 +1,6 @@
 [runtime]
 sampler = test
-
+verbosity = standard
 
 [test]
 save_dir=output/demo12
@@ -13,7 +13,6 @@ values = demos/values12.ini
 likelihoods = evs
 priors = demos/priors12.ini
 extra_output = 
-quiet=T
 debug=T
 timing=F
 
