--- a/demos/demo13.ini
+++ b/demos/demo13.ini
@@ -9,7 +9,7 @@
 ;it's still useful
 
 sampler = snake
-
+verbosity = quiet
 
 [snake]
 ; Snake tries to explore at most 5 log-like points away from the peak
@@ -25,7 +25,6 @@ nsample_dimension = 20
 [output]
 filename = output/demo13.txt
 format = text
-verbosity= debug
 
 [pipeline]
 ; We use two likelihoods, the JLA (for high redshift) and
@@ -35,7 +34,6 @@ modules = consistency camb jla riess11
 values = demos/values13.ini
 extra_output = likelihoods/jla_like
 likelihoods = jla riess
-quiet=T
 debug=F
 timing=F
 
