--- a/demos/demo15.ini
+++ b/demos/demo15.ini
@@ -1,6 +1,7 @@
 ; Demonstrate the different angular two-point functions in the standard library
 [runtime]
 sampler = test
+verbosity = standard
 
 [test]
 save_dir=output/demo15
@@ -12,7 +13,6 @@ values = demos/values15.ini
 ; Not used here, becuase we are not sampling
 likelihoods =
 extra_output =
-quiet=F
 debug=T
 timing=F
 
