--- a/demos/demo3.ini
+++ b/demos/demo3.ini
@@ -1,5 +1,6 @@
 [runtime]
 sampler = grid
+verbosity = standard
 
 [grid]
 ; The number of samples to take in each
@@ -9,7 +10,6 @@ nsample_dimension = 25
 [pipeline]
 modules = consistency camb bicep2
 values = demos/values3.ini
-quiet = F
 
 
 [output]
