--- a/demos/demo5.ini
+++ b/demos/demo5.ini
@@ -2,6 +2,7 @@
 ; The emcee sampler, which uses the Goodman & Weare algorithm
 sampler = emcee
 root = ${PWD}
+verbosity = quiet
 
 [emcee]
 ; The emcee sampler uses the concept of walkers, a collection
@@ -22,7 +23,6 @@ nsteps = 100
 [output]
 filename = output/demo5.txt
 format = text
-verbosity= debug
 
 [pipeline]
 ; We use two likelihoods, the JLA (for high redshift) and
@@ -31,7 +31,6 @@ verbosity= debug
 modules = consistency camb jla riess11
 values = demos/values5.ini
 extra_output =
-quiet=T
 debug=F
 timing=F
 
