--- a/demos/demo6.ini
+++ b/demos/demo6.ini
@@ -1,6 +1,7 @@
 [runtime]
 ; The test sampler just runs a single parameter set
 sampler = test
+verbosity = standard
 
 [test]
 save_dir=output/demo6
@@ -25,7 +26,6 @@ likelihoods = cfhtlens
 extra_output = 
 
 ; We can get a little more output during the run by setting some values
-quiet=F
 timing=T
 debug=T
 
