--- a/demos/demo7.ini
+++ b/demos/demo7.ini
@@ -1,7 +1,7 @@
 [runtime]
 ; We use the grid sampler, as in demo 3.  But this time we go over 2 dimensions.
 sampler = grid
-
+verbosity = quiet
 
 [grid]
 ; We do a 20 x 20 grid for a total of 400 points
@@ -14,7 +14,6 @@ nstep = 100
 [output]
 filename = output/demo7.txt
 format = text
-verbosity= debug
 
 [pipeline]
 ; We use one likelihood, the boss likelihood which uses growth parameters
@@ -23,7 +22,6 @@ modules = growthfunction boss
 values = demos/values7.ini
 likelihoods = boss
 extra_output =
-quiet=T
 debug=F
 timing=F
 
