--- a/demos/demo_abc.ini
+++ b/demos/demo_abc.ini
@@ -2,6 +2,7 @@
 ; The test sampler just runs a single parameter set
 sampler = abc
 root = .
+verbosity = quiet
 
 [abc]
 ;For a given set of parameters the ABC
@@ -26,7 +27,6 @@ ngauss = 4
 [output]
 filename = demo_abc.txt
 format = text
-verbosity= debug
 
 [test]
 ; These are the parameters for this sampler.
@@ -49,9 +49,6 @@ values = demos/values_abc.ini
 ; Not used here, becuase we are not sampling
 likelihoods = abc_multigauss
 extra_output = 
-;ABC sampler runs the pipeline many times over before parameters 
-;are accepted, best to set quiet = T 
-quiet=T
 debug=F
 timing=F
 
