--- a/demos/metropolis.ini
+++ b/demos/metropolis.ini
@@ -1,6 +1,7 @@
 [runtime]
 ; The emcee sampler, which uses the Goodman & Weare algorithm
 sampler = metropolis
+verbosity = quiet
 
 [metropolis]
 samples = 20000
@@ -11,7 +12,6 @@ random_start = F
 [output]
 filename = demo_mcmc.txt
 format = text
-verbosity= debug
 
 [pipeline]
 ; We use two likelihoods, the JLA (for high redshift) and
@@ -21,7 +21,6 @@ modules = consistency camb jla riess11
 values = demos/values5.ini
 extra_output =
 likelihoods = jla riess
-quiet=T
 debug=F
 timing=F
 
