--- a/examples/act-dr6-lens.ini
+++ b/examples/act-dr6-lens.ini
@@ -2,6 +2,7 @@
 sampler = test
 root = ${PWD}
 resume = T
+verbosity = noisy
 
 [test]
 save_dir=output/act_dr6_lens
@@ -22,7 +23,6 @@ nsteps = 5
 modules = consistency camb act_dr6_lens
 values = examples/act-dr6-lens-values.ini
 priors = examples/act-dr6-lens-priors.ini
-quiet=F
 debug=F
 timing=F
 extra_output=cosmological_parameters/sigma_8 cosmological_parameters/omega_m
