--- a/examples/des-y1.ini
+++ b/examples/des-y1.ini
@@ -3,6 +3,7 @@
 ;***********************************
 [runtime]
 sampler = test
+verbosity = standard
 
 [pipeline]
 fast_slow = F
@@ -45,8 +46,6 @@ modules =
     2pt_like
 
 extra_output = cosmological_parameters/sigma_8  ; Derived parameter to save
-
-quiet=F
 timing=F
 debug=F
 
