--- a/examples/des-y3-6x2.ini
+++ b/examples/des-y3-6x2.ini
@@ -2,6 +2,7 @@
 
 [runtime]
 sampler = test
+verbosity = standard
 
 [DEFAULT]
 2PT_FILE=likelihood/des-y3/y3_5x2_maglim_UNBLIND_07202021_120721_bestfit3x2.fits
