--- a/examples/des-y3-mira-titan.ini
+++ b/examples/des-y3-mira-titan.ini
@@ -1,6 +1,6 @@
 [runtime]
 sampler = test
-
+verbosity = standard
 
 ; This parameter is used several times in this file, so is
 ; put in the DEFAULT section and is referenced below as %(2PT_FILE)s
@@ -17,7 +17,6 @@ modules =  consistency  bbn_consistency
            shear_m_bias   add_point_mass
            2pt_like  shear_ratio_like
 
-quiet=F
 timing=F
 debug=F
 priors = examples/des-y3-priors.ini
