--- a/examples/des-y3-shear.ini
+++ b/examples/des-y3-shear.ini
@@ -3,7 +3,7 @@
 ; related to galaxy density and galaxy-galaxy lensing
 [runtime]
 sampler = test
-
+verbosity = standard
 
 ; This parameter is used several times in this file, so is
 ; put in the DEFAULT section and is referenced below as %(2PT_FILE)s
@@ -20,7 +20,6 @@ modules =  consistency  bbn_consistency
            shear_m_bias
            2pt_like
 
-quiet=F
 timing=F
 debug=F
 priors = examples/des-y3-priors.ini
