--- a/examples/euclid-emulator.ini
+++ b/examples/euclid-emulator.ini
@@ -1,12 +1,11 @@
 [runtime]
 sampler = test
-
+verbosity = standard
 
 
 [pipeline]
 modules =  consistency  bbn_consistency  camb  extrapolate  euclid_emulator
 
-quiet=F
 timing=F
 debug=F
 
