--- a/examples/lsst_forecast/lsst_analyze.ini
+++ b/examples/lsst_forecast/lsst_analyze.ini
@@ -3,6 +3,7 @@
 ;***********************************
 [runtime]
 sampler = test
+verbosity = standard
 
 [test]
 save_dir=output/lsst_forecast
@@ -21,7 +22,6 @@ filename=outputs/lsst_forecast.txt
 format=text
 
 [pipeline]
-quiet=F
 timing=F
 debug=T
 modules = consistency camb  extrapolate load_nz photoz_bias_source photoz_bias_lens unbiased_galaxies nonlinear_linear_alignment  pk_to_cl galaxy_bias shear_calibration add_intrinsic 2pt_like 
