--- a/examples/pantheon.ini
+++ b/examples/pantheon.ini
@@ -3,6 +3,7 @@
 sampler = emcee
 root = ${PWD}
 resume=T
+verbosity = quiet
 
 [emcee]
 ; The emcee sampler uses the concept of walkers, a collection
@@ -42,7 +43,6 @@ multinest_outfile_root=output/mn
 [output]
 filename = output/pantheon.txt
 format = text
-verbosity = debug
 
 [pipeline]
 ; We use two likelihoods, the JLA (for high redshift) and
@@ -54,7 +54,6 @@ verbosity = debug
 modules = consistency astropy pantheon riess21
 values = examples/pantheon_values.ini
 extra_output = cosmological_parameters/ommh2
-quiet=T
 debug=F
 timing=F
 
