--- a/examples/pantheon_plus_shoes.ini
+++ b/examples/pantheon_plus_shoes.ini
@@ -2,6 +2,7 @@
 sampler = emcee
 root = ${PWD}
 resume=T
+verbosity = standard
 
 [emcee]
 walkers = 32
@@ -12,13 +13,11 @@ nsteps = 10
 [output]
 filename = output/pantheon_plus_shoes.txt
 format = text
-verbosity = debug
 
 [pipeline]
 modules = consistency astropy pantheon_plus
 values = examples/pantheon_plus_shoes_values.ini
 extra_output = cosmological_parameters/omega_lambda
-quiet=T
 debug=F
 timing=F
 
