--- a/examples/planck_class.ini
+++ b/examples/planck_class.ini
@@ -1,6 +1,7 @@
 [runtime]
 sampler = test
 root = ${PWD}
+verbosity = standard
 
 [test]
 save_dir=output/planck_class
@@ -16,7 +17,6 @@ planck_path = likelihood/planck2018/baseline/plc_3.0
 ; these names refer to sections later in the file:
 modules = consistency class planck
 values = examples/planck_values.ini
-quiet=F
 debug=T
 timing=F
 
