--- a/examples/w_model.ini
+++ b/examples/w_model.ini
@@ -2,7 +2,7 @@
 ; The emcee sampler, which uses the Goodman & Weare algorithm
 sampler = maxlike
 root = ${PWD}
-
+verbosity = quiet
 
 
 [maxlike]
@@ -57,7 +57,6 @@ nsteps = 10
 [output]
 filename = output/w-model.txt
 format = text
-verbosity = debug
 
 [pipeline]
 ; We use two likelihoods, Pantheon (for high redshift) and
@@ -66,7 +65,6 @@ verbosity = debug
 modules = consistency log_w_model camb pantheon riess21
 values = examples/w_model_values.ini
 extra_output =
-quiet=T
 debug=F
 timing=F
 
