--- a/examples/wmap.ini
+++ b/examples/wmap.ini
@@ -1,6 +1,7 @@
 [runtime]
 sampler = test
 root = ${PWD}
+verbosity = standard
 
 [test]
 save_dir=output/wmap
@@ -11,7 +12,6 @@ fatal_errors=T
 ; these names refer to sections later in the file:
 modules = consistency camb wmap
 values = examples/planck_values.ini
-quiet=F
 debug=T
 timing=F
 
