--- a/demos/demo19.ini
+++ b/demos/demo19.ini
@@ -2,6 +2,7 @@
 ; The test sampler just runs a single parameter set
 sampler = grid
 root = .
+verbosity = standard
 
 [grid]
 nsample_dimension=50
@@ -32,7 +33,6 @@ values = demos/values19.ini
 ; Not used here, becuase we are not sampling
 likelihoods = he0435
 extra_output = 
-quiet=T
 debug=F
 timing=F
 
