--- a/demos/demo8.ini
+++ b/demos/demo8.ini
@@ -1,6 +1,7 @@
 [runtime]
 ; The test sampler just runs a single parameter set
 sampler = test
+verbosity = standard
 
 [test]
 save_dir=output/demo8
@@ -15,7 +16,6 @@ values = demos/values8.ini
 ; Not used here, becuase we are not sampling
 likelihoods = 
 extra_output = 
-quiet=F
 debug=T
 timing=F
 
