--- a/demos/mocks.ini
+++ b/demos/mocks.ini
@@ -2,6 +2,7 @@
 ; The test sampler just runs a single parameter set
 sampler = test
 root = .
+verbosity = standard
 
 [test]
 ; These are the parameters for this sampler.
@@ -24,7 +25,6 @@ values = demos/values1.ini
 ; Not used here, becuase we are not sampling
 likelihoods = 
 extra_output = 
-quiet=F
 debug=T
 timing=F
 
