--- a/examples/bao.ini
+++ b/examples/bao.ini
@@ -1,13 +1,12 @@
 [runtime]
 sampler = test
-
+verbosity = quiet
 
 
 ; WARNING: Some of these likelihoods have data in common.
 ; You shouldn't use them all in a real pipeline - this is just for testing
 [pipeline]
 modules =  consistency  camb  6dfgs_1 6dfgs_2 6dfgs_3 6dfgs_4 boss_0 boss_1 boss_dr12_0 boss_dr12_1 eboss_lrg eboss_lya des_y3_bao_1 des_y3_bao_2 des_y3_bao_3 des_y3_bao_4 eboss16_boss_0 eboss16_boss_1 eboss16_elg_0 eboss16_elg_1 eboss16_lrg_0 eboss16_lrg_1 eboss16_lya eboss16_mgs eboss16_qso_0 eboss16_qso_1 mgs wigglez 
-quiet=T
 timing=F
 debug=F
 values = examples/bao-values.ini
