--- a/examples/planck_lite.ini
+++ b/examples/planck_lite.ini
@@ -1,6 +1,7 @@
 [runtime]
 sampler = test
 root = ${PWD}
+verbosity = standard
 
 [test]
 save_dir=output/planck
@@ -11,7 +12,6 @@ fatal_errors=T
 ; these names refer to sections later in the file:
 modules = consistency camb planck 
 values = examples/planck_lite_values.ini
-quiet=F
 debug=T
 timing=T
 
