--- a/examples/various-spectra.ini
+++ b/examples/various-spectra.ini
@@ -1,6 +1,7 @@
 ; Demonstrate the different angular two-point functions in the standard library
 [runtime]
 sampler = test
+verbosity = standard
 
 [test]
 save_dir=output/various-spectra
@@ -12,7 +13,6 @@ values = examples/various-spectra-values.ini
 ; Not used here, becuase we are not sampling
 likelihoods =
 extra_output =
-quiet=F
 debug=T
 timing=F
 
