--- a/likelihood/sptpol/spt.ini
+++ b/likelihood/sptpol/spt.ini
@@ -2,6 +2,7 @@
 ; The test sampler just runs a single parameter set
 sampler = test
 root = ${COSMOSIS_SRC_DIR}
+verbosity = standard
 
 [test]
 ; These are the parameters for this sampler.
@@ -24,7 +25,6 @@ values = demos/spt_values.ini
 ; Not used here, becuase we are not sampling
 likelihoods = sptpol
 extra_output = 
-quiet=F
 debug=T
 timing=F
 
