--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -394,11 +394,7 @@ jobs:
         python -m pip install --upgrade pip wheel setuptools
         pip install git+https://github.com/joezuntz/cosmosis@interactive-use
         pip install -v --no-cache-dir --no-binary=mpi4py,camb mpi4py camb
-        pip install fitsio astropy fast-pt "Cython<3.0" jupyter sacc
-
-    - name: Install likelihood python dependencies
-      run: |
-        pip install "act_dr6_lenslike>=1.0.2"
+        pip install fitsio astropy fast-pt "Cython<3.0"
 
     - name: Build
       run: |
