Update to new campaign set format

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,18 @@ jobs:
           source cosmosis-configure
           make
 
+      - name: Test campaign commands
+        shell: bask -l {0}
+        run: |
+          source cosmosis-configure
+          cosmosis-campaign -l examples/des-campaign.yml | tee output/campaign.log
+          grep -e "mira-titan" campaign.log
+          grep -e "fiducial" campaign.log
+          cosmosis-campaign --run fiducial-test-only examples/des-campaign.yml
+          cosmosis-campaign  examples/des-campaign.yml --status fiducial-test-only > output/campaign.log
+          grep -e "🟢 fiducial-test-only" output/campaign.log
+          
+
       - name: Smail example
         shell: bash -l {0}
         run: |
