allow sampling in S_8

--- a/examples/des-y3-shear-values.ini
+++ b/examples/des-y3-shear-values.ini
@@ -3,8 +3,12 @@ omega_m      =  0.1     0.3     0.9
 h0           =  0.55    0.69    0.91
 omega_b      =  0.03    0.048   0.07
 n_s          =  0.87    0.97    1.07
-A_s          =  0.5e-09 2.19e-9 5.0e-09
 w            =  -1.0
+
+; This is here to test S_8 sampling, not to recommend it.
+; Don't just put a flat prior on whatever the most convenient
+; parameter is.
+S_8          =  0.7    0.772   0.84
 
 ; Old parameter names from original cosmosis version
 ; omnuh2       =  0.0006  0.00083 0.00644
